# registry-factory

./: .gitignore  CODE-OF-CONDUCT.md  LICENSE  README.md  pyproject.toml
abstract_codebase/: accreditation.py  config.py  directories.py  factory.py  index.py  metacoding.py  postchecks.py  registration.py  tracker.py
abstract_codebase/checks/: accreditation.py  factory_pattern.py  testing.py  versioning.py
abstract_codebase/patterns/: facade.py  observer.py
examples/: create_custom_registry.py  example_1_create_factory.py  example_2_register.py  example_3_register_prebuilt.py
registry_factory/: factory.py  index.py  registry.py  tools.py  tracker.py  typescripts.py  utils.py
registry_factory/checks/: accreditation.py  factory_pattern.py  testing.py  versioning.py
registry_factory/patterns/: facade.py  mediator.py  metacoding.py  observer.py
tests/: test_accreditation.py  test_arguments.py  test_custom_checks.py  test_factory.py  test_factory_pattern.py  test_postchecks.py  test_registration.py  test_sharing.py  test_testing_check.py  test_unshared.py  test_versioning.py
