[tool.poetry]
name = "abstract-codebase"
version = "0.1.0"
description = ""
authors = ["svensson <svensson@ml.jku.at>"]
readme = "README.md"
packages = [{include = "abstract_codebase"}]

[tool.poetry.dependencies]
python = "^3.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
