[tool.poetry]
name = "registry-factory"
version = "0.1.1"
description = "Abstract codebase with utilities to register generic modules."
authors = ["Peter Hartog <peter.hartog@hotmail.nl>", "Emma Svensson <svensson@ml.jku.at>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/aidd-msca/registry-factory"
repository = "https://github.com/aidd-msca/registry-factory"
keywords = ["registry", "factory", "codebase", "module registry", "accreditation system"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Environment :: GPU :: NVIDIA CUDA :: 11.4",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
include = [
    "LICENSE",
]
packages = [{include = "registry_factory"}]

[tool.poetry.dependencies]
python = "^3.8"

# A list of all of the optional dependencies, some of which are included in the
# below `extras`. They can be opted into by apps.
#yaml = { version = "^2.6", optional = true }
#hypdra = { version = "^0.12.16", optional = true }

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

